fix(testing): JUnit test performed